--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="score">Score:</string>
     <string name="high_score">High score:</string>
     <string name="reset">reset</string>
+    <string name="pause">pause</string>
 </resources>
